# wema-hackaholics7-0-hackathon-uyo-project-team-blueprint

./: README.md
backend/: .gitignore  main.py  pyproject.toml
backend/app/accounts/: models.py  router.py  schemas.py  service.py
backend/app/activity/: models.py  router.py  schemas.py  service.py
backend/app/debtors/: router.py
backend/app/inventory/: models.py  router.py  schemas.py  service.py
backend/app/notifications/: models.py  router.py  service.py
backend/app/reports/: router.py  schemas.py  service.py
backend/app/simulation/: router.py  service.py
backend/app/transactions/: models.py  router.py  schemas.py  service.py
backend/app/voice/: router.py  service.py
backend/app/webhooks/: router.py  service.py
frontend/: AGENTS.md  index.html  openapi.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/public/: sw.js
frontend/src/: index.css  main.tsx  routeTree.tsx
frontend/src/components/: ai-assistant.tsx  auth-screen.tsx  bottom-nav.tsx  landing-page.tsx  pin-input.tsx  sidebar.tsx
frontend/src/components/modals/: cash-sale-modal.tsx  collect-debt-drawer.tsx  credit-modal.tsx  edit-product-drawer.tsx  incoming-transfer-modal.tsx  index.tsx  log-debt-modal.tsx  reports-drawer.tsx  row.tsx  settle-debt-modal.tsx
frontend/src/lib/: api.ts  endpoints.ts  query-hooks.ts  sound.ts  tts.ts  utils.ts
frontend/src/routes/: __root.tsx  auth.tsx  dashboard.tsx  debtors.tsx  index.tsx  insights.tsx  inventory.tsx  notifications.tsx  sandbox.tsx  transactions.tsx
frontend/src/store/: app-context.tsx  types.ts
(+11 files in other folders)
