[project]
name = "traka-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.3",
    "bcrypt>=5.0.0",
    "fastapi>=0.139.0",
    "google-genai>=2.12.0",
    "groq>=1.5.0",
    "httpx>=0.28.1",
    "httpx2>=2.7.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.51.0",
]
